crates/toon-schema/tests/compile_fail/custom_range_on_non_vec.rs
use serde::{Deserialize, Serialize};
use toon_schema::ToonSchema;

#[derive(ToonSchema, Serialize, Deserialize)]
struct CustomRangeOnNonVec {
    // ERROR: custom ranges can only be applied to Vec<T> fields
    #[toon_schema(example = "\"value\"", min = 1)]
    name: String,
}

fn main() {}
