crates/toon-schema/tests/compile_fail/custom_range_on_non_vec.stderr
error: custom ranges can only be applied to Vec<T> fields
 --> tests/compile_fail/custom_range_on_non_vec.rs:8:5
  |
8 |     name: String,
  |     ^^^^
